getUserMedia() exposed, but not functional https://bugs.webkit.org/show_bug.cgi?id=158393 <rdar://problem/26642259>

Reviewed by Dean Jackson.

Set default value of the Media Stream runtime flag to false on Mac OS X and iOS until the
browser support is in place.

* bindings/generic/RuntimeEnabledFeatures.cpp:
(WebCore::RuntimeEnabledFeatures::RuntimeEnabledFeatures): Disable media stream by default
on Mac OS X and iOS.
* bindings/generic/RuntimeEnabledFeatures.h:


Canonical link: https://commits.webkit.org/177442@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202704 268f45cc-cd09-0410-ab3c-d52691b4dbfc