Source/WebCore/bindings/generic/RuntimeEnabledFeatures.cpp
@@ -63,8 +63,8 @@ RuntimeEnabledFeatures::RuntimeEnabledFeatures()
 #if ENABLE(INDEXED_DATABASE_IN_WORKERS)
     , m_isIndexedDBWorkersEnabled(true)
 #endif
-#if ENABLE(MEDIA_STREAM)
-    , m_isMediaStreamEnabled(true)
+#if ENABLE(MEDIA_STREAM) && PLATFORM(COCOA)
+    , m_isMediaStreamEnabled(false)
 #endif
 #if ENABLE(WEB_RTC)
     , m_isPeerConnectionEnabled(true)
